Tweak - Fix gallery and social links alignment CSS

--- a/assets/sass/_theme-style.scss
+++ b/assets/sass/_theme-style.scss
@@ -4582,6 +4582,19 @@ Comments
 }
 
 /*--------------------------------------------------------------
+Gutenberg Blocks Layout.
+--------------------------------------------------------------*/
+.wp-block-gallery,
+.wp-block-social-links {
+
+	&.alignleft,
+	&.alignright,
+	&.aligncenter {
+		display: flex;
+	}
+}
+
+/*--------------------------------------------------------------
 WooCommerce
 --------------------------------------------------------------*/
 
