--- a/style.css
+++ b/style.css
@@ -4150,6 +4150,16 @@ Comments
 }
 
 /*--------------------------------------------------------------
+Gutenberg Blocks Layout.
+--------------------------------------------------------------*/
+.wp-block-gallery.alignleft, .wp-block-gallery.alignright, .wp-block-gallery.aligncenter,
+.wp-block-social-links.alignleft,
+.wp-block-social-links.alignright,
+.wp-block-social-links.aligncenter {
+	display: flex;
+}
+
+/*--------------------------------------------------------------
 WooCommerce
 --------------------------------------------------------------*/
 .woocommerce ul.products li.product a img,
